


=== Scénarios d'utilisation améliorés de l'espace de noms

Un support a été ajouté pour les applications, couvrant plusieurs espaces de noms ainsi que les ressources de cluster associées à des ressources qualifiées par espace de noms.



=== Des abonnements cloud étendus

Des abonnements à plusieurs comptes peuvent désormais être ajoutés pour chacun des fournisseurs cloud.

.Informations associées
* https://docs.netapp.com/us-en/astra-control-center/release-notes/whats-new.html["Astra Control Center : les nouveautés"^]




== 10 août 2022 (22.08)

Cette version inclut une extension et une mise à jour de l'API REST, ainsi que des fonctions de sécurité et d'administration améliorées.



=== Nouvelles ressources Astra

Trois nouveaux types de ressources ont été ajoutés : *certificat*, *Groupe* et *AppMirror*. En outre, les versions de plusieurs ressources existantes ont été mises à jour.



=== Authentification LDAP

Vous pouvez configurer Astra Control Center pour qu'il s'intègre à un serveur LDAP afin d'authentifier les utilisateurs Astra sélectionnés. Voir link:../workflows_infra/ldap_prepare.html["Configuration LDAP"] pour en savoir plus.



=== Crochet d'exécution amélioré

Le support pour les crochets d'exécution a été ajouté avec la version 21.12 de l'Astra Control. En plus des crochets d'exécution pré-instantané et post-instantané existants, vous pouvez désormais configurer les types de crochets d'exécution suivants avec la version 22.08 :

* Avant sauvegarde
* Post-sauvegarde
* Post-restauration


Astra Control permet désormais d'utiliser le même script pour plusieurs crochets d'exécution.



=== Réplication des applications à l'aide de SnapMirror

Vous pouvez désormais répliquer les données et les changements d'applications entre les clusters à l'aide de la technologie NetApp SnapMirror. Cette amélioration peut être utilisée pour améliorer la continuité de l'activité et les capacités de restauration.

.Informations associées