@@ -649,11 +649,8 @@
   <block id="f06023f42f86a62fda5cde9e1ca56143" category="section-title">Exemple Curl : nom, état et ID de cluster pour tous les namespaces</block>
   <block id="78ceba6718263592394adb03dc11471c" category="summary">Il est recommandé de passer en revue tous les problèmes connus relatifs à la version actuelle de l'API REST Astra Control. Les problèmes connus identifient les problèmes susceptibles de vous empêcher d'utiliser le produit avec succès.</block>
   <block id="95dc0391ce7b396d7dd5622284e8fc3e" category="doc">Problèmes connus</block>
-  <block id="0b7d1e8a8b66c054d1b104e700b7bd15" category="admonition">Il n'y a pas de nouveaux problèmes connus avec la version 22.08 de l'API REST Astra Control. Les problèmes décrits ci-dessous ont été découverts dans les versions précédentes et sont toujours applicables avec la version actuelle.</block>
   <block id="f977fda19bbfe49b9346f60f532f0704" category="section-title">Tous les périphériques de stockage d'un nœud de stockage interne ne sont pas détectés</block>
   <block id="13595bcf3f8022567de41bcd09ef92b2" category="paragraph">Lors de l'émission d'un appel d'API REST pour récupérer les périphériques de stockage définis dans un nœud de stockage, seuls les périphériques de stockage de données Astra sont découverts. Tous les périphériques ne sont pas renvoyés.</block>
-  <block id="fd341dfea170932946910997510c48e8" category="section-title">Le stockage back-end d'Astra dans un état inconnu</block>
-  <block id="e1c83179f57e62cb00fbb2646ef58e6e" category="paragraph">Le système backend de stockage des magasins de données d'Astra<block ref="88183b946cc5f0e8c96b2e66e1c74a7e" prefix=" " category="inline-code"></block> État après émission d'un appel API pour récupérer le back-end de stockage. Dans cet état, le système back-end est toujours disponible et peut être communiqué avec. Toutefois, un composant du système de stockage back-end est probable qu'il soit défectueux et doit être ramené à un état sain pour que le système back-end puisse afficher le<block ref="78945de8de090e90045d299651a68a9b" prefix=" " category="inline-code"></block>.</block>
   <block id="7128d9d8a839786105f002007172fbe5" category="summary">NetApp met régulièrement à jour l'API REST Astra Control pour vous apporter de nouvelles fonctionnalités, des améliorations et des correctifs.</block>
   <block id="c93cc787737ceea532bea714170e32cf" category="doc">Nouveautés de l'API REST Astra Control</block>
   <block id="affab1573a02975db1b9ece3ebe809a2" category="section-title">10 août 2022 (22.08)</block>
@@ -1104,4 +1101,7 @@
   <block id="547abae9d6ca9df339ec4543e220ab8e" category="sidebar">Premier appel d'API</block>
   <block id="013a127f643228c21ab6c9baf558cef5" category="sidebar">Ajouter un cluster</block>
   <block id="826f785c760529ceb6e978afdab2a9a7" category="sidebar">Création d'une règle de protection</block>
+  <block id="01d6bcac2686956739a4135c6248a7e0" category="admonition">Il n'y a pas de nouveaux problèmes connus avec la version 22.11 de l'API REST Astra Control. Les problèmes décrits ci-dessous ont été découverts dans les versions précédentes et sont toujours applicables avec la version actuelle.</block>
+  <block id="25742c79c197ce7f0982652ead3bd964" category="section-title">Flux de travail supplémentaires</block>
+  <block id="7494e7f70b31d89664784c20229e8098" category="paragraph">Des workflows supplémentaires illustrant l'API REST Astra Control ont été ajoutés. Voir <block ref="fc2071d838ca44c08fca8ef5c62f2e8e" category="inline-link-macro-rx"></block> et <block ref="b729850dc33cbcb91b47d13a137b85a8" category="inline-link-macro-rx"></block> pour en savoir plus.</block>
 </blocks>
